nikolay-owncloud-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nikolay-owncloud-ingress
spec:
  tls:
  - hosts:
    - nikolay.diveinto.ru
    secretName: nikolay-owncloud-secret
  rules:
  - host: nikolay.diveinto.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: nikolay-owncloud-svc
          servicePort: 80
